--- a/_sass/util.scss
+++ b/_sass/util.scss
@@ -1,3 +1,9 @@
 @mixin transition($property: all, $duration: $transition-duration, $easing: $transition-easing) {
   transition: $property $duration $easing;
 }
+
+@mixin media($breakpoint) {
+  @media only screen and (min-width: $breakpoint) {
+    @content;
+  }
+}
