--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
   <title>REMEMBER TO SET TITLE</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Trocchi" rel="stylesheet">
   <link rel="stylesheet" href="{{"/assets/main.css" | relative_url }}">
