fix work items not having row direction on larget screens

--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -24,6 +24,9 @@
   &__inner {
     display: flex;
     flex-direction: column;
+    @include media($bp-small) {
+      flex-direction: row;
+    }
   }
 
   &__item {
