--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -3,5 +3,5 @@
   margin: 0 auto;
   padding-right: $grid-margin;
   padding-left: $grid-margin;
-  @include grid-container;
+  @include ingrid-container;
 }
