do some things@

--- a/_sass/vars.scss
+++ b/_sass/vars.scss
@@ -1,11 +1,13 @@
 $color-dark: #3E454C;
 $color-light: #FFF6E5;
+$color-off-white: #fefefe;
 $color-blue-regular: #2185C5;
 $color-blue-light: #7ECEFD;
 $color-red-bleached: #FF7F66;
 $color-red-bleached: #FF7F66;
 
 $color-bg: $color-light;
+  $color-bg: $color-off-white;
 $color-fg: $color-dark;
 $color-link: $color-blue-regular;
 $color-link-special: $color-blue-light;
