add some more projects

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,20 @@
 <header class="header">
-  <div class="container header__inner">
+  <div class="l-container header__inner">
     <div class="header__logo">
       <a class="header__logo-link" href="{{ site.url }}">
         {% include logo.html %}
       </a>
+    </div>
+    <div class="header__nav">
+      <nav class="mainnav">
+        <ul class="mainnav__list">
+          {% for item in site.navigation %}
+            <li class="mainnav__list-item {% if item.url == page.url %}mainnav__list-item--active{% endif %}">
+              <a href="{{ item.url }}">{{ item.title }}</a>
+            </li>
+          {% endfor %}
+        </ul>
+      </nav>
     </div>
   </div>
 </header>
