--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -6,8 +6,9 @@
 @import "typography";
 @import "layout";
 
-@import "pages/index";
+@import "pages/home";
 
 @import "components/logo";
 @import "components/header";
+@import "components/mainnav";
 @import "components/perspective-card";
