--- a/_sass/components/header.scss
+++ b/_sass/components/header.scss
@@ -2,6 +2,12 @@
   padding: 1rem 0;
 }
 
+.header__inner {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+}
+
 .header__logo {
   &-link {
     text-decoration: none;
