add work template:

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -7,8 +7,11 @@
 @import "layout";
 
 @import "pages/home";
+@import "pages/work";
 
+@import "components/button";
 @import "components/logo";
 @import "components/header";
 @import "components/mainnav";
 @import "components/perspective-card";
+@import "components/showcase";
