--- a/_sass/vars.scss
+++ b/_sass/vars.scss
@@ -23,6 +23,7 @@ $neat-grid: (
 );
 
 $font-family-primary: 'Open Sans', Helvetica, 'Helvetica Neue', Arial, sans-serif;
+$font-family-primary: 'Merriweather', Helvetica, 'Helvetica Neue', Arial, sans-serif;
 $font-family-secondary: 'Trocchi', Palatino, serif;
 
 
