--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -6,6 +6,9 @@ layout: default
   <div class="work__showcase">
     <div class="showcase">
       <div class="showcase__container" js-autoscroll>
+        <!-- <div class="showcase__toolbar">
+          <span class="showcase__toolbar-title">{{ page.work_url }}</span>
+        </div> -->
         <img class="showcase__image" src="{{ page.showcase }}">
       </div>
     </div>
