--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -15,3 +15,5 @@
 @import "components/mainnav";
 @import "components/perspective-card";
 @import "components/showcase";
+@import "components/footer";
+@import "components/social";
